--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1166,6 +1166,9 @@ body {
 	@media (max-width: 460px) {
 		margin-top: 50px;
 	}
+	&-article {
+		background: url("../img/article/bg.jpg") center/cover no-repeat;
+	}
 	&__body {
 		padding-top: 60px;
 		min-height: 280px;
@@ -1229,6 +1232,9 @@ body {
 			flex: none;
 			padding: 20px;
 		}
+	}
+	&__main-article {
+		margin-bottom: 100px;
 	}
 }
 .aside {
@@ -1372,6 +1378,63 @@ body {
 		margin-bottom: 10px;
 		p:first-child {
 			font-weight: 700;
+		}
+	}
+
+	&__text-article {
+		margin-bottom: 50px;
+		p {
+			margin-bottom: 15px;
+			&:first-child {
+				font-weight: 300;
+			}
+		}
+		ul {
+			li {
+				position: relative;
+				margin-left: 10px;
+				margin-bottom: 5px;
+				&:before {
+					content: "";
+					background: #caad73;
+					height: 5px;
+					width: 5px;
+					border-radius: 50%;
+					display: block;
+					position: absolute;
+					top: 10px;
+					left: -10px;
+				}
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+		}
+	}
+	&__back-button {
+		transition: all 0.3s ease 0s;
+		font-size: 12px;
+		line-height: 18px;
+		text-transform: uppercase;
+		color: #5d799c;
+		border: 1px solid #5d799c;
+		display: inline-flex;
+		align-items: center;
+		justify-content: flex-end;
+		padding-right: 30px;
+		max-width: 290px;
+		width: 100%;
+		height: 50px;
+		background: url("../img/article/back.svg") 18px center no-repeat;
+		&:hover {
+			background: url("../img/article/back-white.svg") 12px center no-repeat, #5d799c;
+			color: #fff;
+		}
+		@media (max-width: 460px) {
+			span{
+				display: none;
+			}
+			max-width: 220px;
 		}
 	}
 }
