--- a/css/style.css
+++ b/css/style.css
@@ -2027,6 +2027,85 @@ body.touch .sub-menu__list.open li {
   background: url("../img/list/right.svg") center no-repeat, #fff;
 }
 
+.gallery__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 -12px;
+  padding: 48px 0 24px 0;
+}
+
+@media (max-width: 767px) {
+  .gallery__body {
+    padding: 48px 0 0 0;
+  }
+}
+
+.gallery__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
+  position: relative;
+  min-width: 280px;
+  padding: 0 12px;
+  margin-bottom: 28px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+@media (min-width: 1024px) {
+  .gallery__item:hover .gallery__image-hover {
+    opacity: 1;
+    visibility: visible;
+  }
+  .gallery__item:hover a {
+    text-decoration: underline;
+  }
+}
+
+.gallery__image-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: url("../img/gallery/watch.svg") center no-repeat, rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.gallery__image {
+  margin: 0 0 18px 0;
+  padding: 0 0 71% 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.gallery__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.gallery__link {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 120%;
+  color: #234d8e;
+}
+
 .footer {
   background: #132e51;
 }
