--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1506,7 +1506,7 @@ body {
 					opacity: 1;
 					visibility: visible;
 				}
-				a{
+				a {
 					text-decoration: underline;
 				}
 			}
@@ -1546,6 +1546,63 @@ body {
 		font-size: 20px;
 		line-height: 120%;
 		color: #234d8e;
+	}
+}
+
+//set
+
+.set {
+	&__body {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin: 0 -12px;
+		padding: 48px 0 24px 0;
+		@media (max-width: 767px) {
+			padding: 48px 0 0 0;
+		}
+	}
+
+	&__item {
+		flex: 0 1 25%;
+		min-width: 280px;
+		padding: 12px;
+	}
+
+	&__image {
+		position: relative;
+		transition: all 0.3s ease 0s;
+		padding: 0 0 71% 0;
+		overflow: hidden;
+		img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+		@media (min-width: 1024px) {
+			&:hover {
+				.set__hover {
+					opacity: 1;
+					visibility: visible;
+				}
+			}
+		}
+	}
+
+	&__hover {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
+		width: 100%;
+		height: 100%;
+		background: url("../img/set/zoom.svg") center no-repeat, rgba(36, 78, 143, 0.6);
+		opacity: 0;
+		visibility: hidden;
+		transition: all 0.3s ease 0s;
 	}
 }
 
