--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1482,6 +1482,9 @@ body {
 		margin-left: 10px;
 		background: url("../img/list/right.svg") center no-repeat, #fff;
 	}
+	@media (max-width:992px) {
+		justify-content: center;
+	}
 }
 
 //gallery
