--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1591,6 +1591,7 @@ body {
 			object-fit: cover;
 			width: 100%;
 			height: 100%;
+			display: block;
 		}
 		@media (min-width: 1024px) {
 			&:hover {
@@ -1613,6 +1614,9 @@ body {
 		opacity: 0;
 		visibility: hidden;
 		transition: all 0.3s ease 0s;
+		@media (max-width:1023px) {
+			visibility: visible;
+		}
 	}
 }
 
